<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/Username"
            android:layout_width="278dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:backgroundTint="#6B6868"
            android:ems="10"
            android:hint="username"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#B0B0B0" />


        <EditText
            android:id="@+id/editPassword"
            android:layout_width="279dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:backgroundTint="#6B6868"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#B0B0B0"
            tools:layout_editor_absoluteX="57dp"
            tools:layout_editor_absoluteY="281dp" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#A91616"
            android:text="@string/Signinbtn"
            android:textColor="#FFFFFF" />


    </LinearLayout>


    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/black"
        android:src="@drawable/ic_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="Back"
        />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="117dp"
        android:layout_height="49dp"
        android:layout_gravity="center"
        android:layout_marginTop="620dp"
        android:backgroundTint="#A91616"
        android:text="@string/LoginSignUp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/LoginNewToNetflix"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

<!--    <ImageView-->
<!--        android:id="@+id/netflixLogo"-->
<!--        android:layout_width="292dp"-->
<!--        android:layout_height="81dp"-->
<!--        android:layout_marginStart="-10dp"-->
<!--        android:adjustViewBounds="true"-->
<!--        android:scaleType="fitXY"-->
<!--        android:src="@drawable/netfilm_logo"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.534"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.146" />-->


</androidx.constraintlayout.widget.ConstraintLayout>