<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MovieActivity">

    <androidx.media3.ui.PlayerView
        android:id="@+id/moviePlayer"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:resize_mode="fit" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        app:layout_constraintBottom_toBottomOf="@id/moviePlayer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="vertical">


            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/movie_title"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/moviePlayer" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/year"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/movie_year"
                    android:textColor="#F8F3F3"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@+id/movieTime" />

<!--                <TextView-->
<!--                    android:id="@+id/age"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="40dp"-->
<!--                    android:background="#6B6868"-->
<!--                    android:gravity="center"-->
<!--                    android:text="@string/age"-->
<!--                    android:padding="5dp"-->
<!--                    android:textColor="#F8F3F3"-->
<!--                    android:textSize="15sp"-->
<!--                    android:visibility="visible"-->
<!--                    app:layout_constraintEnd_toStartOf="@+id/movieTime" />-->

                <TextView
                    android:id="@+id/movieTime"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/movie_time"
                    android:textColor="#FFFAFA"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/year"
                    app:layout_constraintTop_toBottomOf="@id/movieTitle" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPlay"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#E90000"
                android:gravity="center"
                android:text="@string/movie_play"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="9dp"
                app:icon="@drawable/ic_play"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:iconTint="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/movieDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movieTime"
                app:layout_constraintVertical_bias="0.85"
                app:rippleColor="?android:attr/colorControlHighlight"
                android:layout_marginTop="10dp"/>


            <TextView
                android:id="@+id/movieDescription"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:padding="10dp"
                android:textColor="#FAF5F5"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnPlay" />

            <TextView
                android:id="@+id/recommendedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@color/black"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/more_like_this"
                android:textColor="#F8F3F3"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movieDescription" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewRecommended"
                android:layout_width="match_parent"
                android:layout_height="274dp"
                android:layout_marginTop="4dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recommendedTitle" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>